# ciphex

./: Cargo.toml  README.md
crates/analysis/: Cargo.toml
crates/analysis/src/: coincidence.rs  frequency.rs  lib.rs  signature.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  types.rs
crates/detectors/: Cargo.toml
crates/detectors/src/: cipher.rs  encoding.rs  hash.rs  lib.rs
