[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/detectors",
    "crates/analysis",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive", "cargo"] }
colored = "3.0.0"
